--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-boilerplate",
+  "homepage": "https://react-boilerplate.mehulgolania.now.sh",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,9 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
   }
 }
